--- a/index.html
+++ b/index.html
@@ -33,25 +33,27 @@
               Clear
             </li>
           </ul>
-          <div class="col-4">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />12 ºC | ºF
-          </div>
-          <div class="col-4">
-            <ul>
-              <li>
-                Humidity: 0%
-              </li>
-              <li>
-                Wind: 0 Km/h
-              </li>
-            </ul>
-          </div>
         </div>
-        <div class="col-2">
-          Forecast
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+            alt="Clear"
+          />12 ºC | ºF
+        </div>
+        <div class="col-4">
+          <ul>
+            <li>
+              Humidity: 0%
+            </li>
+            <li>
+              Wind: 0 Km/h
+            </li>
+          </ul>
+        </div>
+        <div class="col-1">
+          <div class="row">Forecast</div>
         </div>
       </div>
     </div>
