--- a/index.html
+++ b/index.html
@@ -13,50 +13,7 @@
     <title>KnowYourWeather</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <span>button</span>
-        </div>
-        <div class="col-6">
-          <strong>Know Your Weather</strong>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-7">
-          <h1>New York</h1>
-          <ul>
-            <li>
-              Sunday 05:00
-            </li>
-            <li>
-              Clear
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-            alt="Clear"
-          />12 ºC | ºF
-        </div>
-        <div class="col-4">
-          <ul>
-            <li>
-              Humidity: 0%
-            </li>
-            <li>
-              Wind: 0 Km/h
-            </li>
-          </ul>
-        </div>
-        <div class="col-1">
-          <div class="row">Forecast</div>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
     <script src="src/app.js"></script>
   </body>
 </html>
